Update java version and dependencies